--- a/style.css
+++ b/style.css
@@ -6,3 +6,14 @@
 	/* border: 1px solid black;  */
 
 }
+body {
+	padding: 0px;
+	text-align: center;
+	background-color: #fff3f3;
+	/* height: 100vh; */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/* border: 30px solid black;  */
+
+}
