--- a/style.css
+++ b/style.css
@@ -47,3 +47,23 @@ body {
 	font-weight: 600;
 	color: #000000dd;
 }
+.likes-section {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 10px;
+}
+
+.likes {
+	font-size: 1.5rem;
+	font-weight: 600;
+}
+
+.like-button {
+	color: rgb(255, 127, 80);
+	font-size: 1.5rem;
+	border: none;
+	background: none;
+	transition: color 300ms;
+	cursor: pointer;
+}
