--- a/style.css
+++ b/style.css
@@ -67,3 +67,32 @@ body {
 	transition: color 300ms;
 	cursor: pointer;
 }
+
+.slides {
+	width: 500%;
+	height: 500px;
+	display: flex;
+}
+
+.slider {
+	height: 300px;
+	width: 500px;
+	border-radius: 10px;
+	overflow: hidden;
+
+}
+
+.slides input {
+	display: none;
+}
+
+.slide {
+	width: 500px;
+	transition: 2s;
+
+}
+
+.slide img {
+	width: 500px;
+	height: 300px;
+}
