--- a/style.css
+++ b/style.css
@@ -188,3 +188,75 @@ body {
 	background: black;
 }
 
+.like-button:hover {
+	color: rgb(182, 211, 36);
+}
+
+.like-button:active {
+	color: rgb(0, 0, 0);
+}
+
+.like-button:focus {
+	outline: none;
+}
+
+.list-group {
+	/* list-style-type: none; */
+	margin-left: 0;
+	padding-left: 10px;
+	font-size: 1.5rem;
+}
+
+.Fact-list {
+	margin: 2px 0;
+	letter-spacing: 0.2px;
+	font-size: large;
+	min-width: 100%;
+}
+
+.comment-form {
+	width: 100%;
+	border-top: 1px solid #83171720;
+	padding: 10px;
+	margin-top: 10px;
+	font-size: large;
+}
+
+.comment-input {
+	width: 80%;
+	border: #000000dd;
+	font-size: 1.5rem;
+	padding: 5px;
+	border-color: #0e0b0bdd;
+}
+
+.comment-input:focus {
+	outline: none;
+}
+
+.submit-button {
+	border: none;
+	font-size: 1.5rem;
+	font-weight: 600;
+	color: rgb(0, 0, 0);
+	/* cursor: pointer; */
+	transition: color 300ms;
+}
+
+.submit-button:hover {
+	color: rgb(37, 68, 245);
+}
+
+.submit-button:active {
+	color: rgb(127, 146, 250);
+}
+
+.submit-button:focus {
+	outline: none;
+}
+
+@media (max-midth: 320px){
+	.image-card{
+		width: 100px;
+	}
+}
