--- a/style.css
+++ b/style.css
@@ -3,19 +3,24 @@
 	font-family: Arial, Helvetica, sans-serif;
 	box-sizing: border-box;
 	resize: both;
-	/* border: 1px solid black;  */
-
 }
 body {
 	padding: 0px;
 	text-align: center;
 	background-color: #fff3f3;
-	/* height: 100vh; */
+	height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	/* border: 30px solid black;  */
+	border: 30px solid black; 
 
+}
+
+.background-image {
+	background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH6se-7RJ3WBCgjzHaQ5m1uaOFF6NMt4n9lg&usqp=CAU');
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 100vh;
 }
 
 .image-container {
@@ -201,7 +206,6 @@ body {
 }
 
 .list-group {
-	/* list-style-type: none; */
 	margin-left: 0;
 	padding-left: 10px;
 	font-size: 1.5rem;
@@ -239,7 +243,6 @@ body {
 	font-size: 1.5rem;
 	font-weight: 600;
 	color: rgb(0, 0, 0);
-	/* cursor: pointer; */
 	transition: color 300ms;
 }
 
