--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
 	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family:  "Gill Sans", sans-serif;
 	box-sizing: border-box;
 	resize: both;
 }
@@ -12,7 +12,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border: 30px solid black; 
+	/* border: 30px solid black;  */
 
 }
 
@@ -20,7 +20,7 @@ body {
 	background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH6se-7RJ3WBCgjzHaQ5m1uaOFF6NMt4n9lg&usqp=CAU');
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 100vh;
+	/* height: 100vh; */
 }
 
 .image-container {
@@ -34,7 +34,7 @@ body {
 	border: 1px solid black;
 	border-radius: 4px;
 	text-align: left;
-	background-color: rgba(228, 226, 108, 0.468);
+	background-color: rgb(228, 226, 108, 0.468);
 	resize: both;
 
 }
@@ -209,6 +209,10 @@ body {
 	margin-left: 0;
 	padding-left: 10px;
 	font-size: 1.5rem;
+	text-overflow: clip;
+	text-decoration-color: black;
+	/* font-weight: 600; */
+	color: black;
 }
 
 .Fact-list {
@@ -216,6 +220,7 @@ body {
 	letter-spacing: 0.2px;
 	font-size: large;
 	min-width: 100%;
+	text-decoration-color: black;
 }
 
 .comment-form {
